# rauha

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  demo.sh
containerd-shim-rauha-v2/: Cargo.toml  build.rs
containerd-shim-rauha-v2/src/: main.rs  rauha_client.rs  task.rs
deploy/: rauha-enforce-daemonset.yaml
eval/oracle/: Cargo.toml  build.rs
eval/oracle/src/: main.rs
policies/: privileged.toml  standard.toml  strict.toml
proto/: container.proto  image.proto  zone.proto
rauha-cli/: Cargo.toml
rauha-cli/src/: main.rs
rauha-cli/src/commands/: exec.rs  image.rs  logs.rs  mod.rs  output.rs  policy.rs  run.rs  setup.rs  trace.rs  zone.rs
rauha-common/: Cargo.toml
rauha-common/src/: backend.rs  container.rs  error.rs  lib.rs  shim.rs  zone.rs
rauha-ebpf/: Cargo.toml
rauha-ebpf-common/: Cargo.toml
rauha-ebpf-common/src/: lib.rs  types.rs
rauha-ebpf/src/: capable_guard.rs  cgroup_lock.rs  exec_guard.rs  file_guard.rs  main.rs  ptrace_guard.rs  signal_guard.rs  socket_connect_guard.rs
rauha-enforce/: Cargo.toml
rauha-enforce/src/: ebpf.rs  events.rs  main.rs  mapper.rs  policy.rs  watcher.rs
rauha-guest-agent/: Cargo.toml
rauha-guest-agent/src/: attach.rs  container.rs  main.rs
rauha-oci/: Cargo.toml
rauha-oci/src/: content.rs  distribution.rs  image.rs  lib.rs  reference.rs  runtime.rs  snapshotter.rs
rauha-shim/: Cargo.toml
rauha-shim/src/: attach.rs  container.rs  io.rs  main.rs  state.rs
rauhad/: Cargo.toml  build.rs
rauhad/src/: logs.rs  main.rs  server.rs
rauhad/src/backend/: mod.rs
rauhad/src/backend/linux/: cgroup.rs  ebpf.rs  events.rs  maps.rs  mod.rs  namespace.rs  network.rs  nftables.rs
rauhad/src/backend/macos/: apfs.rs  mod.rs  pf.rs  vm.rs  vsock.rs
rauhad/src/metadata/: db.rs
rauhad/src/network/: allocator.rs  dns.rs  mod.rs
rauhad/src/zone/: mod.rs  policy.rs  registry.rs
tests/integration/: test-cgroup-lock.sh  test-container-lifecycle.sh  test-exec.sh  test-image-pull.sh  test-logs.sh  test-zone-isolation.sh  test-zone-networking.sh
xtask/: Cargo.toml
xtask/src/: main.rs
