[workspace]
resolver = "2"
members = [
    "rauha-common",
    "rauha-ebpf-common",
    "rauhad",
    "rauha-cli",
    "rauha-shim",
    "rauha-guest-agent",
    "rauha-oci",
    "containerd-shim-rauha-v2",
    "rauha-enforce",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rauha-runtime/rauha"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
postcard = { version = "1", features = ["alloc"] }

# Metadata store
redb = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OCI
oci-spec = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Compression / archive
flate2 = "1"
tar = "0.4"

# Async streams
tokio-stream = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"

# Platform-specific (Linux)
[workspace.dependencies.nix]
version = "0.29"
features = ["fs", "mount", "sched", "signal", "user", "net", "hostname", "poll", "term", "process"]

# eBPF (Linux)
[workspace.dependencies.aya]
version = "0.13"
[workspace.dependencies.aya-log]
version = "0.2"

# macOS Virtualization.framework bindings
[workspace.dependencies.objc2]
version = "0.6"
features = ["exception"]
[workspace.dependencies.block2]
version = "0.6"
[workspace.dependencies.objc2-virtualization]
version = "0.3"
features = ["dispatch2"]
[workspace.dependencies.dispatch2]
version = "0.3"
features = ["alloc", "objc2"]
[workspace.dependencies.objc2-foundation]
version = "0.3"

# Internal
[workspace.dependencies.rauha-ebpf-common]
path = "rauha-ebpf-common"
features = ["userspace"]
