[package]
name = "containerd-shim-rauha-v2"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "containerd-shim-rauha-v2"
path = "src/main.rs"

[dependencies]
# Containerd shim framework
containerd-shim = { version = "0.10", features = ["async"] }
containerd-shim-protos = "0.10"
async-trait = "0.1"

# Rauha gRPC client
tonic.workspace = true
prost.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
log = "0.4"

# Error handling
anyhow.workspace = true

# OCI spec parsing
oci-spec.workspace = true

# Serialization
serde.workspace = true
serde_json = "1"

[build-dependencies]
tonic-build.workspace = true
