[package]
name = "rauha-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rauha"
path = "src/main.rs"

[dependencies]
rauha-common = { path = "../rauha-common" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
libc = "0.2"

[build-dependencies]
tonic-build = { workspace = true }
