[package]
name = "rauha-ebpf-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
# Enable userspace-only helpers (requires std).
userspace = ["aya"]

[dependencies]
# aya is optional — only needed for Pod impl on userspace side.
# This crate must still compile for bpfel-unknown-none without it.
aya = { version = "0.13", optional = true }
