[package]
name = "rauha-guest-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rauha-common = { path = "../rauha-common" }

serde = { workspace = true }
serde_json = "1"
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
oci-spec = { workspace = true }
