[package]
name = "rauha-oci"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rauha-common = { path = "../rauha-common" }

oci-spec = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
