[package]
name = "rauha-oci"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rauha-common = { path = "../rauha-common" }

oci-spec = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = "3"
