[package]
name = "rauha-shim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rauha-common = { path = "../rauha-common" }

postcard = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
oci-spec = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
