[package]
name = "rauhad"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rauha-common = { path = "../rauha-common" }
rauha-oci = { path = "../rauha-oci" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
redb = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
postcard = { workspace = true }
tokio-stream = "0.1"
serde_json = "1"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
rauha-ebpf-common = { workspace = true }
nix = { workspace = true }
oci-spec = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
block2 = { workspace = true }
objc2-virtualization = { workspace = true }
objc2-foundation = { workspace = true }
dispatch2 = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = { workspace = true }
